done: redone the database system (not  yet) to add: generate all files(in progress) necessary to submit the form. maybe automize form submission? IDEAS: add 'grafik' - automatically generate schedule report from the driver schedule change database system: one table for all trips, trip index as time, in case of a not full route, jump to the next one until it's not null.[DONE]